# bluefox2

install/: install.bash
mvIMPACT/apps/: CMakeLists.txt  Makefile  Makefile.samp.inc
mvIMPACT/apps/Callback/: CMakeLists.txt  Callback.cpp
mvIMPACT/apps/Callback/x86_64/: Callback
mvIMPACT/apps/Callback_C/: CMakeLists.txt  Callback.c
mvIMPACT/apps/Callback_C/x86_64/: Callback
mvIMPACT/apps/CameraDescriptions/: CMakeLists.txt  CameraDescriptions.cpp  CameraDescriptions.win32.cpp
mvIMPACT/apps/CaptureToUserMemory/: CaptureToUserMemory.cpp  CaptureToUserMemory.legacy.cpp  Makefile.inc
mvIMPACT/apps/CaptureToUserMemory/x86_64/: CaptureToUserMemory
mvIMPACT/apps/CaptureToUserMemory_C/: CMakeLists.txt  CaptureToUserMemory.c
mvIMPACT/apps/CaptureToUserMemory_C/x86_64/: CaptureToUserMemory
mvIMPACT/apps/Common/: CommonGUIFunctions.cpp  CommonGUIFunctions.h  Info.h  ProxyResolverContext.h  exampleHelper_C.c  exampleHelper_C.h  qInfo.h  qtIncludeEpilogue.h  qtIncludePrologue.h  wxAbstraction.h  wxIncludeEpilogue.h  wxIncludePrologue.h  wxIncluder.h
mvIMPACT/apps/Common/FirmwareUpdate_mvHYPERION/: Epcs.cpp  Epcs.h  Timeout.cpp
mvIMPACT/apps/Common/linux/: ProxyResolverContext.cpp
mvIMPACT/apps/ContinuousCapture/: CMakeLists.txt  ContinuousCapture.cpp  ContinuousCapture.linux.cpp  ContinuousCapture.win32.cpp
mvIMPACT/apps/ContinuousCaptureAllDevices/: CMakeLists.txt  ContinuousCaptureAllDevices.cpp  ContinuousCaptureAllDevices.linux.cpp  Makefile.inc
mvIMPACT/apps/ContinuousCaptureAllDevices/x86_64/: ContinuousCaptureAllDevices.linux
mvIMPACT/apps/ContinuousCaptureFLTK/: CMakeLists.txt  ContinuousCaptureFLTK.cpp  Makefile  Makefile.inc
mvIMPACT/apps/ContinuousCaptureFLTK/x86_64/: ContinuousCaptureFLTK
mvIMPACT/apps/ContinuousCaptureGenICam_C/: CMakeLists.txt  ContinuousCaptureGenICam.c
mvIMPACT/apps/ContinuousCaptureGenICam_C/x86_64/: ContinuousCaptureGenICam
mvIMPACT/apps/ContinuousCaptureMultiPart/: CMakeLists.txt  ContinuousCaptureMultiPart.cpp  ContinuousCaptureMultiPart.legacy.cpp
mvIMPACT/apps/ContinuousCaptureMultipleInputs/: CMakeLists.txt  ContinuousCaptureMultipleInputs.cpp  ContinuousCaptureMultipleInputs.legacy.cpp
mvIMPACT/apps/ContinuousCaptureMultipleVideoSignals/: CMakeLists.txt  ContinuousCaptureMultipleVideoSignals.cpp  ContinuousCaptureMultipleVideoSignals.legacy.cpp
mvIMPACT/apps/ContinuousCaptureOnlyProcessLatest/: CMakeLists.txt  ContinuousCaptureOnlyProcessLatest.cpp  ContinuousCaptureOnlyProcessLatest.legacy.cpp
mvIMPACT/apps/ContinuousCaptureQt/: CMakeLists.txt  CaptureThread.cpp  CaptureThread.h  ContinuousCaptureQt.cpp  ContinuousCaptureQt.h  ContinuousCaptureQt.qrc  ContinuousCaptureQt.ui  ImageCanvas.cpp  ImageCanvas.h  main.cpp
mvIMPACT/apps/ContinuousCapture_C/: CMakeLists.txt  ContinuousCapture.c
mvIMPACT/apps/DigitalIOs/: CMakeLists.txt  DigitalIOs.cpp  DigitalIOs.legacy.cpp  Makefile.inc
mvIMPACT/apps/FirmwareUpgrade/: CMakeLists.txt  FirmwareUpgrade.cpp  Makefile
mvIMPACT/apps/GenICamCommonSettingsUsage/: CMakeLists.txt  GenICamCommonSettingsUsage.cpp  GenICamCommonSettingsUsage.legacy.cpp
mvIMPACT/apps/GenICamI2cUsage/: CMakeLists.txt  GenICamI2cUsage.cpp
mvIMPACT/apps/GenICamInterfaceLayout/: CMakeLists.txt  GenICamInterfaceLayout.cpp  GenICamInterfaceLayout.legacy.cpp  Makefile  Makefile.inc
mvIMPACT/apps/GenICamSequencerParameterChangeAtRuntime/: CMakeLists.txt  GenICamSequencerParameterChangeAtRuntime.cpp  GenICamSequencerParameterChangeAtRuntime.legacy.cpp  Makefile  Makefile.inc
mvIMPACT/apps/GenICamSequencerUsage/: CMakeLists.txt  GenICamSequencerUsage.cpp  GenICamSequencerUsage.legacy.cpp  Makefile.inc
mvIMPACT/apps/GenICamSequencerUsageWithPaths/: CMakeLists.txt  GenICamSequencerUsageWithPaths.cpp  GenICamSequencerUsageWithPaths.legacy.cpp  Makefile.inc
mvIMPACT/apps/GenICamSmartFrameRecallUsage/: CMakeLists.txt  GenICamSmartFrameRecallUsage.cpp  GenICamSmartFrameRecallUsage.legacy.cpp  Makefile.inc
mvIMPACT/apps/GenericInterfaceLayout/: CMakeLists.txt  GenericInterfaceLayout.cpp  GenericInterfaceLayout.legacy.cpp  Makefile  Makefile.inc
mvIMPACT/apps/Properties/: CMakeLists.txt  Makefile  Makefile.inc  Properties.cpp  Properties.legacy.cpp
mvIMPACT/apps/Python/: ContinuousCapture
mvIMPACT/apps/SingleCapture/: CMakeLists.txt  SingleCapture.cpp
mvIMPACT/apps/SingleCaptureMasterSlave/: CMakeLists.txt  SingleCaptureMasterSlave.cpp  SingleCaptureMasterSlave.legacy.cpp
mvIMPACT/apps/SingleCaptureStorage/: CMakeLists.txt  Makefile  SingleCaptureStorage.cpp
mvIMPACT/apps/TimestampFeatures/: CMakeLists.txt  TimestampFeatures.cpp
mvIMPACT/apps/mvDeviceConfigure/: CMakeLists.txt  CheckedListCtrl.cpp  CheckedListCtrl.h  DebugFileParser.cpp  DebugFileParser.h  DeviceConfigureFrame.cpp  DeviceConfigureFrame.h  DeviceHandler.cpp  DeviceHandler.h  DeviceHandlerBlueDevice.cpp  DeviceHandlerBlueDevice.h  DeviceHandlerBlueFOX.cpp  DeviceHandlerBlueFOX.h  DeviceHandlerHYPERION.cpp  DeviceHandlerHYPERION.h  DeviceListCtrl.cpp  DeviceListCtrl.h  LogOutputConfigurationDlg.h  LogOutputHandlerDlg.cpp  LogOutputHandlerDlg.h  Makefile  Makefile.inc  PackageDescriptionParser.cpp  PackageDescriptionParser.h  ValuesFromUserDlg.cpp  ValuesFromUserDlg.h  icons.h  mvDeviceConfigure.icon.xpm
mvIMPACT/apps/mvPropView/: CaptureThread.cpp  CaptureThread.h  DataGrid.cpp  DataGrid.h  DevCtrl.cpp  DevCtrl.h  DevData.cpp  DevData.h  DrawingCanvas.h  GlobalDataStorage.cpp  GlobalDataStorage.h  HistogramCanvas.cpp  HistogramCanvas.h  HistogramCanvasSpatialNoise.cpp  HistogramCanvasTemporalNoise.cpp  HistogramCanvasTemporalNoise.h  ImageAnalysisPlotControls.cpp  ImageCanvas.cpp  ImageCanvas.h  ImageCanvasCommon.cpp  LineProfileCanvasHorizontal.cpp  LineProfileCanvasVertical.cpp  Makefile  Makefile.inc  PlotCanvas.h  PlotCanvasImageAnalysis.cpp  PlotCanvasImageAnalysis.h  PlotCanvasInfo.cpp  PlotCanvasInfo.h  PlotCanvasIntensity.cpp  PlotCanvasIntensity.h  PropData.cpp  PropData.h  PropGridFrameBase.cpp  PropGridFrameBase.h  PropTree.cpp  PropTree.h  PropViewCallback.cpp  PropViewFrame.cpp  PropViewFrame.h  (+27 more)
(+81 files in other folders)
